# SnapCook

./: .gitignore
backend/: main.py  pyproject.toml
backend/app/: graph.py  main.py  models.py
backend/app/services/: vector_store.py  vision.py
backend/scripts/: clean_data.py  ingest.py
frontend/: package-lock.json  package.json
frontend/app/: page.jsx
frontend/app/recipe/[id]/: page.jsx
frontend/lib/: api.js
